[package]
name = "obsidian_render"
version = "0.1.0"
edition = "2021"

[features]
default = ["vulkan"] # features allows for conditional compilation & optional dependencies
vulkan = []

[dependencies]
anyhow = "1.0.34"
log = "0.4.11"
raw-window-handle = "0.3.3" # raw-window handle is a library that abstracts platform specific window handles